--- a/foundations/project-recipes/index.html
+++ b/foundations/project-recipes/index.html
@@ -7,5 +7,9 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="./recipes/roasted_pumpkin_seeds.html">Roasted Pumpkin 
+Seeds</a></li>
+    </ul>
   </body>
 </html>
