--- a/foundations/project-recipes/index.html
+++ b/foundations/project-recipes/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><a href="./recipes/roasted_pumpkin_seeds.html">Roasted Pumpkin 
 Seeds</a></li>
+      <li><a href="./recipes/rustic_guacamole.html">Rustic Guacamole</a></li>
     </ul>
   </body>
 </html>
