Add Chocolate Cake Recipe

--- a/foundations/project-recipes/index.html
+++ b/foundations/project-recipes/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
+      <li><a href="./recipes/chocolate_cake.html">Flourless Chocolate Cake</a></li>
       <li><a href="./recipes/roasted_pumpkin_seeds.html">Roasted Pumpkin 
 Seeds</a></li>
       <li><a href="./recipes/rustic_guacamole.html">Rustic Guacamole</a></li>
