--- a/foundations/project-recipes/recipes/chocolate_cake.html
+++ b/foundations/project-recipes/recipes/chocolate_cake.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Back to recipe index</a>
     <h1>Flourless Chocolate Cake</h1>
     <img src="../img/flourless_chocolate_cake.jpg" width="500" alt="A photograph of cubes of chocolate cake, stacked 
 3-high, with chocolate sauce drizzled on top">
