--- a/foundations/project-recipes/recipes/roasted_pumpkin_seeds.html
+++ b/foundations/project-recipes/recipes/roasted_pumpkin_seeds.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Back to recipe index</a>
     <h1>Roasted Pumpkin Seeds</h1>
     <img src="../img/roasted_pumpkin_seeds.jpg" width=500" alt="a 
 photograph of roasted pumpkin seeds inside a small, 
