--- a/foundations/project-recipes/recipes/rustic_guacamole.html
+++ b/foundations/project-recipes/recipes/rustic_guacamole.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+    <a href="../index.html">Back to recipe index</a>
     <h1>Rustic Guacamole</h1>
     <img src="../img/rustic_guacamole.jpg" width="500" alt="a photograph of guacamole in a small, white dish, surrounded 
 by garnishes such as parsley, tomatoes, and lime, all set on a wooden cutting board.">
