--- a/foundations/project-recipes/recipes/rustic_guacamole.html
+++ b/foundations/project-recipes/recipes/rustic_guacamole.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rustic Guacamole</title>
+    <link rel="stylesheet" href="../css/style.css">
   </head>
 
   <body>
