Add Simple Styling to Recipe Pages

--- a/foundations/project-recipes/index.html
+++ b/foundations/project-recipes/index.html
@@ -7,12 +7,15 @@
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/chocolate_cake.html">Flourless Chocolate Cake</a></li>
-      <li><a href="./recipes/roasted_pumpkin_seeds.html">Roasted Pumpkin 
+    <div class="centered-list">
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="./recipes/chocolate_cake.html">Flourless Chocolate 
+Cake</a></li>
+        <li><a href="./recipes/roasted_pumpkin_seeds.html">Roasted Pumpkin 
 Seeds</a></li>
-      <li><a href="./recipes/rustic_guacamole.html">Rustic Guacamole</a></li>
-    </ul>
+        <li><a href="./recipes/rustic_guacamole.html">Rustic Guacamole</a></li>
+      </ul>
+    </div>
   </body>
 </html>
