--- a/foundations/project-recipes/recipes/chocolate_cake.html
+++ b/foundations/project-recipes/recipes/chocolate_cake.html
@@ -8,10 +8,10 @@
 
   <body>
     <a href="../index.html">Back to recipe index</a>
-    <h1>Flourless Chocolate Cake</h1>
-    <img src="../img/flourless_chocolate_cake.jpg" width="500" alt="A photograph of cubes of chocolate cake, stacked 
+    <h1 class="recipe-title">Flourless Chocolate Cake</h1>
+    <img src="../img/flourless_chocolate_cake.jpg" alt="A photograph of cubes of chocolate cake, stacked 
 3-high, with chocolate sauce drizzled on top">
-    <p><em>Photo by <a 
+    <p class="caption"><em>Photo by <a 
 href="https://unsplash.com/@pushpak88?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Pushpak 
 Dsilva</a> on <a 
 href="https://unsplash.com/photos/2UeBOL7UD34?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
