--- a/foundations/project-recipes/recipes/roasted_pumpkin_seeds.html
+++ b/foundations/project-recipes/recipes/roasted_pumpkin_seeds.html
@@ -8,11 +8,11 @@
 
   <body>
     <a href="../index.html">Back to recipe index</a>
-    <h1>Roasted Pumpkin Seeds</h1>
-    <img src="../img/roasted_pumpkin_seeds.jpg" width=500" alt="a 
+    <h1 class="recipe-title">Roasted Pumpkin Seeds</h1>
+    <img src="../img/roasted_pumpkin_seeds.jpg" alt="a 
 photograph of roasted pumpkin seeds inside a small, 
 wooden bowl against a black background">
-    <p><em>Photo by <a 
+    <p class="caption"><em>Photo by <a 
 href="https://unsplash.com/@enginakyurt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">engin 
 akyurt</a> on <a 
 href="https://unsplash.com/photos/45FWnefiNyw?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></em></p>
