--- a/foundations/project-recipes/recipes/rustic_guacamole.html
+++ b/foundations/project-recipes/recipes/rustic_guacamole.html
@@ -8,10 +8,10 @@
 
   <body>
     <a href="../index.html">Back to recipe index</a>
-    <h1>Rustic Guacamole</h1>
-    <img src="../img/rustic_guacamole.jpg" width="500" alt="a photograph of guacamole in a small, white dish, surrounded 
+    <h1 class="recipe-title">Rustic Guacamole</h1>
+    <img src="../img/rustic_guacamole.jpg" alt="a photograph of guacamole in a small, white dish, surrounded 
 by garnishes such as parsley, tomatoes, and lime, all set on a wooden cutting board.">
-    <p><em>Photo by <a 
+    <p class="caption"><em>Photo by <a 
 href="https://unsplash.com/@t_rampersad?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Tessa 
 Rampersad</a> on <a 
 href="https://unsplash.com/photos/9ND-qkGs1_8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></em></p>
