--- a/foundations/project-recipes/index.html
+++ b/foundations/project-recipes/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div class="centered-list">
+    <div>
       <h1>Odin Recipes</h1>
       <ul>
         <li><a href="./recipes/chocolate_cake.html">Flourless Chocolate 
